:hammer: update build script